# certification-dataeng-aws-emr

./: .gitignore  LICENSE  Makefile  README.md  aws.cfg.template  emr-error.txt  emr.cfg  log.txt  pyproject.toml
artists.parquet/: .part-00000-7018bcc9-b6ad-4456-900d-2d8dc534d4b8-c000.snappy.parquet.crc  part-00000-7018bcc9-b6ad-4456-900d-2d8dc534d4b8-c000.snappy.parquet
config/: aws.cfg.template  emr.cfg
data/bronze/logs.json/: .part-00000-03fe7096-32f0-4cee-8c23-bee3e248f17b-c000.json.crc  part-00000-ff7c329a-0306-487c-976d-d2033e8c7508-c000.json
data/bronze/songs.json/: .part-00000-af9d5394-eb3c-455b-9303-75cfb29a4359-c000.json.crc  part-00000-af9d5394-eb3c-455b-9303-75cfb29a4359-c000.json
data/silver/artists.parquet/: .part-00000-5c0e2226-2f43-4c60-9af7-1da46f16ab3f-c000.snappy.parquet.crc  .part-00000-e563b8e3-2378-4085-9fbd-2e73fc974337-c000.snappy.parquet.crc  part-00000-5c0e2226-2f43-4c60-9af7-1da46f16ab3f-c000.snappy.parquet  part-00000-e563b8e3-2378-4085-9fbd-2e73fc974337-c000.snappy.parquet
data/silver/songplays.parquet/: .part-00000-d2e55c26-b2c8-439e-9d0e-e9890f5d0efd-c000.snappy.parquet.crc  (+3 more)
docker/: docker-compose.yml  up.sh
docs/source/: conf.py  etl.rst  index.rst  src.rst
src/: driver.py  main.py
src/etl/: __init__.py  config.py  etl.cfg  etl.py  metadata.py  pipeline.py
src/notebook/: etl.ipynb  etl.zpln
terraform/: .terraform.lock.hcl  config.json  configurations.json  emr.tf  iam.tf  keypair.tf  outputs.tf  s3.tf  variables.tf  vpc.tf
terraform/permissions/: EmrDefaultPolicy.json  EmrDefaultRole.json
(+37216 files in other folders)
